--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <input type="text" id="inputBx" placeholder="write here..." name="fname"><br>
-                <button class="button" onclick="addTask()">Add</button>
+                <!-- <button class="button" onclick="addTask()">Add</button> -->
 
 
             </div>
@@ -51,6 +51,6 @@
         
         </script>
      
-     <script src="script.js" type="text/javascript"></script>
+<!-- <script src="script.js" type="text/javascript"></script>  -->
 </body>
 </html>
